--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,27 @@ a {
     color: var(--brand-color);
 }
 
+.current-link{
+    color: var(--brand-color);
+}
+
+.nav-link.current-link::after {
+    position: absolute;
+    content: '';
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    margin: 0;
+    padding: 0;
+    background-color: var(--brand-color);
+    border-radius: 2px;
+}
+
+.nav-item {
+    position: relative;
+}
+
 .nav-item:not(:last-child) {
     margin-right: 50px;
 }
@@ -232,10 +253,39 @@ a {
     display: flex;
 }
 
+.activity-item {
+    position: relative;
+
+    height: 294px;
+}
+
 .activity-item:not(:last-child) {
     margin-right: 30px;
 }
 
+.activity-wrap {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    bottom: 0;
+
+    width: 370px;
+    height: 70px;
+
+    background: rgba(47, 48, 58, 0.8);
+}
+
+.activity-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+
+    color: var(--white-color);
+}
  /* -----------------Team-------------- */
 
  .section.team {
@@ -401,6 +451,57 @@ a {
 .social-link.footer:hover {
     background: var(--brand-color);
 }
+/* ------------------Modal------------------------- */ 
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    width: 528px;
+    height: 581px;
+   
+
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.modal-button {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    top: 8px;
+    right: 8px;
+
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+}
+
+.modal-button:hover {
+    border-color: var(--brand-color);
+}
 
 /*----------------------- Portfolio--------------------------- */
 .filter-list {
@@ -445,6 +546,7 @@ a {
 }
 
 .projects-item {
+   position: relative;
    width: calc((100% - 60px) / 3);
    margin-right: 30px;
    margin-bottom: 30px;
@@ -456,6 +558,25 @@ a {
 
 .projects-item:nth-child(n + 7) {
     margin-bottom: 0px;
+}
+
+.pictures-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: rgba(33, 150, 243, 0.9);
+}
+
+.animated-text {
+    position: absolute;
+    padding: 63px 24px;
+
+    font-size: 18px;
+    line-height: 1.55;
+    
+    color: var(--white-color);
 }
 
 .projects-image {
