--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
     --text-color: #757575;
     --white-color: #fff;
     --main-text-color: #212121;
+    --transition-duration: 250ms;
+    --transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -78,6 +80,8 @@ a {
     display: block;
     padding:32px 0px;
 
+    transition: color var(--transition-duration) var(--transition-timing-function);
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -132,6 +136,8 @@ a {
     display: flex;
     align-items: center;
     padding:32px 0px;
+
+    transition: color var(--transition-duration) var(--transition-timing-function);
 
     font-weight: 500;
     font-size: 14px;
@@ -350,14 +356,16 @@ a {
     height: 44px;
     justify-content: center;
     align-items: center;
-    fill:#AFB1B8;;
+    fill:#AFB1B8;
+    border-radius: 50%;
 
+    transition: background-color var(--transition-duration) var(--transition-timing-function), fill var(--transition-duration) var(--transition-timing-function);
 }
 
 .social-link:hover {
     background-color:var(--brand-color);
     fill: var(--white-color);
-    border-radius: 50%;
+    
 }
 
 /*  -----------------------Постоянные клиенты---------------- */
@@ -380,6 +388,7 @@ a {
     fill: #AFB1B8;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    transition:fill var(--transition-duration) var(--transition-timing-function), border-color var(--transition-duration) var(--transition-timing-function);
 }
 
 .clients-link:hover {
@@ -446,6 +455,7 @@ a {
     fill: var(--white-color);
     background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+    transition: background var(--transition-duration) var(--transition-timing-function);
 }
 
 .social-link.footer:hover {
@@ -497,6 +507,7 @@ a {
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
+    transition: border-color var(--transition-duration) var(--transition-timing-function);
 }
 
 .modal-button:hover {
@@ -525,6 +536,8 @@ a {
     background: #F5F4FA;
     border-radius: 4px;
     border: 0ch;
+
+    transition: color var(--transition-duration) var(--transition-timing-function), background-color var(--transition-duration) var(--transition-timing-function);
 }
 
 .filter-button:hover {
@@ -550,6 +563,11 @@ a {
    width: calc((100% - 60px) / 3);
    margin-right: 30px;
    margin-bottom: 30px;
+   transition: transform var(--transition-duration) var(--transition-timing-function);
+}
+
+.projects-item:hover .animated-text{
+    transform: translateY(0%);
 }
 
 .projects-item:nth-child(3n) {
@@ -567,15 +585,21 @@ a {
     align-items: center;
 
     background: rgba(33, 150, 243, 0.9);
+    overflow: hidden;
 }
 
 .animated-text {
     position: absolute;
+    display: inline-block;
     padding: 63px 24px;
+
+    transform: translateY(101%);
+    transition: transform var(--transition-duration) var(--transition-timing-function);
 
     font-size: 18px;
     line-height: 1.55;
     
+    background: rgba(33, 150, 243, 0.9);
     color: var(--white-color);
 }
 
